--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   },
   "dependencies": {
     "@portabletext/react": "^2.0.1",
+    "@react-spring/parallax": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.15.1",
     "@sanity/webhook": "^2.0.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.3",
     "next": "latest",
     "next-sanity": "^4.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-scrollama": "^2.3.2",
+    "react-spring": "^9.7.2",
+    "sanity-plugin-asset-source-unsplash": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
