--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.15.1",
     "@sanity/webhook": "^2.0.0",
+    "@vercel/edge-config": "^0.4.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.3",
     "next": "latest",
